<?xml version="1.0" encoding="utf-8"?><!--
 HomeWork1
 activity_main.xml
 Atul Kumar Banwar
 Sanket Patil
-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.mad.baccalculator.MainActivity">

    <LinearLayout
        android:id="@+id/layoutWtGender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtViewWeight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lblWeight"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="15dp" />

        <EditText
            android:id="@+id/txtWeight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/txtHntWeight"
            android:inputType="numberDecimal"
            android:textSize="15dp" />

        <TextView
            android:id="@+id/txtViewGender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:text="@string/lblGender"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="15dp" />

        <Switch
            android:id="@+id/switchGender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:fitsSystemWindows="true"
            android:scrollbarAlwaysDrawHorizontalTrack="true"
            android:showText="true"
            android:switchMinWidth="40dp"
            android:textOff="F"
            android:textOn="M" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/layoutSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/layoutWtGender"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="save"
            android:text="@string/btnSave" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/layoutDrinkSize"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/layoutWtGender"
        android:layout_marginTop="90dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtViewDrinkSize"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/lblDrinkSize"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="15dp" />

        <RadioGroup
            android:id="@+id/rdGrpDrinkSize"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rdBtnOneOz"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="true"
                android:text="@string/rdBtnLblOneOz"
                android:textSize="15dp" />

            <RadioButton
                android:id="@+id/rdBtnFiveOz"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/rdBtnLblFiveOz"
                android:textSize="15dp" />

            <RadioButton
                android:id="@+id/rdBtnTwelveOz"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/rdBtnLblTwelveOz"
                android:textSize="15dp" />
        </RadioGroup>

    </LinearLayout>


    <LinearLayout
        android:id="@+id/layoutAlcohol"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/layoutDrinkSize"
        android:layout_marginTop="25dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtViewAlcoholPercentage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/lblAlcoholPercentage"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="15dp" />

        <SeekBar
            android:id="@+id/skBarAlcoholPercentage"
            android:layout_width="220dp"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/txtViewSeekBarValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="5 %"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="15dp" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/layoutAddDrinkRest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/layoutAlcohol"
        android:layout_marginTop="25dp"
        android:orientation="horizontal">


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/btnAddDrink"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="addDrink"
                android:text="@string/btnLblAddDrink" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/btnReset"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:onClick="resetFields"
                android:text="@string/btnLblReset" />
        </LinearLayout>
    </LinearLayout>


    <LinearLayout
        android:id="@+id/layoutBACLevel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/layoutAddDrinkRest"
        android:layout_marginTop="40dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtViewBACLevel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:text="@string/lblBACLevel"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/txtViewBACLevelValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="40dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="30sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutProgressBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/layoutBACLevel"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <ProgressBar
            android:id="@+id/prgBarBACLevel"
            style="@android:style/Widget.Holo.Light.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutStatus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/layoutProgressBar"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtViewStatus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="60dp"
                android:text="@string/lblStatus"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtViewStatusValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
